# nuclear-correlation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codecov.yml  config.sh  environment.yml
.github/workflows/: cache-conda.yml  cmake-single-platform.yml  install-ubuntu.yml  install.yml  standalone.yml  ubuntu.yml
all/: CMakeLists.txt
assets/ame/: ame-20.tbl
assets/samples/: benchmark.root
cmake/: tools.cmake
custom/: CMakeLists.txt  CMakeLists_Sample.txt
custom/correlations/: custom_correlation.cpp  custom_correlation.hpp
custom/cuts/: custom_event_cut.cpp  custom_event_cut.hpp  custom_event_monitor.cpp  custom_event_monitor.hpp  custom_pair_cut.cpp  custom_pair_cut.hpp  custom_pair_monitor.cpp  custom_pair_monitor.hpp  custom_track_cut.cpp  custom_track_cut.hpp  custom_track_monitor.cpp  custom_track_monitor.hpp
custom/readers/: custom_event.cpp  custom_event.hpp  custom_reader.cpp  custom_reader.hpp  custom_track.cpp  custom_track.hpp
dev/: CMakeLists.txt  analysis.cpp  analysis.hpp  base_cut.cpp  base_cut.hpp  collection.hpp  correlation.hpp  event.cpp  event.hpp  event_cut.hpp  fevent.cpp  fevent.hpp  manager.cpp  manager.hpp  monitor.hpp  pair.cpp  pair.hpp  pair_cut.hpp  particle.cpp  particle.hpp  property.hpp  reader.hpp  track.cpp  track.hpp  track_cut.hpp
exec/: CMakeLists.txt  main.cpp  main.hpp
standalone/: CMakeLists.txt  main.cpp  main.hpp
tests/: CMakeLists.txt
tests/dev/: CMakeLists.txt  test_analysis.cpp  test_base_cut.cpp  test_correlation.cpp  test_cut.cpp  test_event.cpp  test_fevent.cpp  test_manager.cpp  test_monitor.cpp  test_pair.cpp  test_particle.cpp  test_property.cpp  test_reader.cpp  test_track.cpp
tests/util/: CMakeLists.txt  test_ame.cpp  test_physics.cpp
util/: CMakeLists.txt
util/ame/: ame.cpp  ame.hpp
util/physics/: physics.cpp  physics.hpp
